button alignment issue fix

--- a/clients/Brainlabs/Avon/AV121/src/_variables.scss
+++ b/clients/Brainlabs/Avon/AV121/src/_variables.scss
@@ -1,5 +1,5 @@
 $media: (xsm:360px,
-    sm: 600px,
+    sm: 640px,
     md: 991px,
     lg: 1024px,
 );
